--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tasks in Eloquent JavaScript book",
   "main": "eloquent.js",
   "scripts": {
-    "compile-js": "mkdir -p dist/js && browserify src/js/eloquent.js -o dist/js/eloquent.js",
+    "compile-js": "mkdir -p dist/js && browserify src/js/eloquent.js -o dist/js/eloquent.js -t babelify --presets es2015",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/davidpauljunior/eloquent-javascript#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.0"
   }
 }
