--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Tasks in Eloquent JavaScript book",
   "main": "eloquent.js",
   "scripts": {
-    "compile-js": "mkdir -p dist/js && browserify src/js/eloquent.js -o dist/js/eloquent.js -t babelify --presets es2015",
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "build:js": "./bin/build-js",
+      "watch:js": "./bin/watch-js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0"
+    "browserify": "^13.1.0",
+    "watchify": "^3.7.0"
   }
 }
