--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Tasks in Eloquent JavaScript book",
   "main": "eloquent.js",
   "scripts": {
-      "build:js": "./bin/build-js",
-      "watch:js": "./bin/watch-js"
+    "build:js": "./bin/build-js",
+    "watch:js": "./bin/watch-js",
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/davidpauljunior/eloquent-javascript#readme",
   "devDependencies": {
+    "ava": "^0.16.0",
+    "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
