--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Tasks in Eloquent JavaScript book",
   "main": "eloquent.js",
   "scripts": {
-    "build:js": "./bin/build-js",
-    "watch:js": "./bin/watch-js",
+    "build-css": "./bin/build-css",
+    "build-js": "./bin/build-js",
+    "watch-js": "./bin/watch-js",
+    "watch-css": "./bin/watch-css",
     "test": "ava"
   },
   "repository": {
@@ -24,6 +26,8 @@
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "clean-css-cli": "^4.0.8",
+    "onchange": "^3.2.1",
     "watchify": "^3.7.0"
   }
 }
