--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:js": "mkdir -p dist/js && browserify ./src/js/eloquent.js -o ./dist/js/eloquent.js -t babelify --presets es2015",
     "watch:js": "onchange './src/js/**/*.js' -- npm run build:js",
     "watch:css": "onchange './src/css/**/*.css' -- npm run build:css",
-    "watch": "npm run watch:js & npm run watch:css",
-    "test": "ava --verbose"
+    "dev": "npm run build:css && npm run build:js && npm run watch:js & npm run watch:css",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/davidpauljunior/eloquent-javascript#readme",
   "devDependencies": {
-    "ava": "^0.16.0",
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "clean-css-cli": "^4.0.8",
+    "jest": "^20.0.1",
     "onchange": "^3.2.1",
     "sinon": "^2.1.0",
     "watchify": "^3.7.0"
