--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build:css": "mkdir -p dist/css && cleancss ./src/css/eloquent-javascript.css -o ./dist/css/eloquent-javascript.min.css",
     "build:js": "mkdir -p dist/js && browserify ./src/js/eloquent.js -o ./dist/js/eloquent.js -t babelify --presets es2015",
-    "watch:js": "onchange './src/js/**/*.js' -- npm run build:js",
     "watch:css": "onchange './src/css/**/*.css' -- npm run build:css",
-    "dev": "npm run build:css & npm run build:js && npm run watch:js & npm run watch:css",
+    "watch:js": "onchange './src/js/**/*.js' -- npm run build:js",
+    "dev": "npm run build:css & npm run build:js && npm run watch:css & npm run watch:js",
     "test": "jest"
   },
   "repository": {
@@ -26,8 +26,9 @@
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "clean-css": "^4.1.7",
     "clean-css-cli": "^4.0.8",
-    "jest": "^20.0.1",
+    "jest": "^20.0.4",
     "onchange": "^3.2.1",
     "watchify": "^3.7.0"
   }
